# cpp-playground

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
include/: math.hpp
src/: main.cpp  math.cpp
tests/: math_tests.cpp
